[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-clone = "1.2.1"
yew = { version = "0.21.0", features = ["csr"] }
yew-autoprops = "0.4.1"
yew_data_link = { path = "../.." }
